Fix: alignment of label in search result item The comment about why align-items: center was needed was outdated

--- a/frontend/scss/organisms/_o-custom-tours-builder.scss
+++ b/frontend/scss/organisms/_o-custom-tours-builder.scss
@@ -38,12 +38,6 @@
 
   }
 
-  .m-listing__link {
-    // Because we need to apply a border/shadow to the image
-    // and also position an icon relative to the image
-    align-items: center;
-  }
-
   label {
     font-weight: 400;
 
@@ -399,6 +393,7 @@
   padding: 0;
   margin: 0;
   cursor: pointer;
+  text-align: unset;
 }
 
 .aic-ct-result--selected {
